background overfloww fix

--- a/anasayfa.css
+++ b/anasayfa.css
@@ -287,10 +287,20 @@ body {
   width: 100%;
 }
 
+.main--bgImg {
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
 .main--bgImg img {
   position: absolute;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
   z-index: -2;
   height: 125vh;
   width: 125vw;
